--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -39,7 +39,7 @@
           <h3 class="text-muted">Netlist & Algorithm Selection</h3>
         </div>
         <div class="card-body">
-          <form id="netlist-input-form" type="file" enctype="multipart/form-data">
+          <form id="netlist-input-form">
           <div class="row">
             <div class="col-md-6">
               <div class="form-check">
@@ -83,10 +83,9 @@
                 <label class="form-label" for="algorithm-select">Select Algorithm</label>
                 <select class="form-select form-select mb-3" required aria-label=".form-select example"
                   id="algorithm-select">
-                  <option value="1" selected>Congestion Heuristic (Binary Heap)</option>
-                  <option value="2">Congestion Heuristic (Fibonacci Heap)</option>
-                  <option value="3">Naive BFS (Binary Heap)</option>
-                  <option value="4">Naive BFS (Fibonacci Heap)</option>
+                  <option value="1" selected>Best First Search (Binary Heap)</option>
+                  <option value="2">Best First Search (Fibonacci Heap)</option>
+                  <option value="3">Breadth First Search</option>
                 </select>
               </div>
             </div>
@@ -98,7 +97,7 @@
               </div>
             </div>
           </div>
-          <button type="button" id="submit-netlist" class="input-group-text btn btn-primary mb-3" disabled>Submit
+          <button type="submit" id="submit-netlist" class="input-group-text btn btn-primary mb-3" disabled>Submit
             Netlist</button>
           </form>
         </div>
