--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -93,7 +93,7 @@
             <div class="col-md-6">
               <div class="mb-3">
                 <label class="form-label" for="seed-input">Enter Seed(Optional)</label>
-                <input type="text" class="form-control" id="seed-input" placeholder="Enter Allah Seed">
+                <input type="number" class="form-control" id="seed-input" placeholder="Enter Allah Seed">
               </div>
             </div>
           </div>
