add algorithm selection to netlist details

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -172,6 +172,7 @@
                       <li>Overflow: {{output.overflow}}</li>
                       <li>Wirelength: {{output.wirelength}}</li>
                       <li>Timestamp: {{output.timestamp}}</li>
+                      <li>Algorithm: {{output.algorithm}}</li>
                     </ul>
                     <a href="/download/{{output.unique_name}}" class="btn btn-primary">Download Output</a>
                   </span>
