add seed to netlist details

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -173,6 +173,7 @@
                       <li>Wirelength: {{output.wirelength}}</li>
                       <li>Timestamp: {{output.timestamp}}</li>
                       <li>Algorithm: {{output.algorithm}}</li>
+                      <li>Seed: {{output.seed}}</li>
                     </ul>
                     <a href="/download/{{output.unique_name}}" class="btn btn-primary">Download Output</a>
                   </span>
