remove fibheap impl, add random seed visual

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -83,9 +83,8 @@
                 <label class="form-label" for="algorithm-select">Select Algorithm</label>
                 <select class="form-select form-select mb-3" required aria-label=".form-select example"
                   id="algorithm-select">
-                  <option value="1" selected>Best First Search (Binary Heap)</option>
-                  <option value="2">Best First Search (Fibonacci Heap)</option>
-                  <option value="3">Breadth First Search</option>
+                  <option value="1" selected>Best First Search</option>
+                  <option value="2">Breadth First Search</option>
                 </select>
               </div>
             </div>
