--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -92,7 +92,7 @@
             <div class="col-md-6">
               <div class="mb-3">
                 <label class="form-label" for="seed-input">Enter Seed(Optional)</label>
-                <input type="number" class="form-control" id="seed-input" placeholder="Enter Allah Seed">
+                <input type="number" class="form-control" id="seed-input" placeholder="Enter Random Seed">
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
                       <li>Grid: {{output.netlist_details.grid_hor}} x {{output.netlist_details.grid_ver}}</li>
                       <li>Horizontal Capacity: {{output.netlist_details.hor_cap}}</li>
                       <li>Vertical Capacity: {{output.netlist_details.ver_cap}}</li>
-                      <li>Netlist Size: {{output.netlist_size}}</li>
+                      <li>Netlist Size: {{output.netlist_details.netlist_size}}</li>
                       <li>Overflow: {{output.overflow}}</li>
                       <li>Wirelength: {{output.wirelength}}</li>
                       <li>Timestamp: {{output.timestamp}}</li>
